# pysparkish

./: README.md
example/: pyproject.toml
example/example/: main.py
example/tests/: test_main.py
