[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Jeremy Greer <jex.grizzle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pyspark-test = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
